--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/locales": "^1.0.0",
     "@remixicon/react": "^4.2.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
