--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/locales": "^1.0.0",
     "@remixicon/react": "^4.2.0",
+    "@tsparticles/all": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "mobx": "^6.12.0",
@@ -22,7 +24,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
