--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "mdb-react-ui-kit": "^8.0.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "pdfjs-dist": "^3.4.120",
