--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-table": "^7.8.0",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
